--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel= "stylesheet" href="assets/style.css">
+    <link rel= "stylesheet" href="style.css">
 </head>
 <body>
     <title> League Of Legends Trivia</title>
+
+    <div class="container">
+
+        <h1> Test</h1>
+
+
+
+
+
+
+
+
+
+
+    </div>
 
 
 
