--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
 
-        <h1> League Of Legends Trivia</h1>
+        <!-- <h1> League Of Legends Trivia</h1> -->
     
         <div  id =  "startButton"> Start </div>
 
