--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
 
         <div id = "gameScreen">
             <div id= "timer"> </div>
-            <div>Time Remaining</div>
+            <div class= "remaining">Time Remaining</div>
 
             <div class= "questions">
+                <!-- <h1> Look up radio input html</h1> -->
+                
+                <p class = "Q"> When was League of Legends released?</p>
+                <input type = "radio" name = "answer"/> 2009 <input type = "radio" name = "answer1"/> 2012 <input type = "radio" name = "answer1"/> 2004 <input type = "radio" name = "answer1"/> 2006   
+            
+                <p class = "Q">How many original champions did the game have when it was released? </p> 
+                <input type = "radio" name = "answer"/> 20 <input type = "radio" name = "answer"/> 40 <input type = "radio" name = "answer"/> 55 <input type = "radio" name = "answer"/> 60
 
-                <p> When was League of Legends released?</p>
-                <input type = "radio" name = "answer1"/> ** look up radio input html**
+                <p class = "Q">What is the name of Quinn's W Ability</p>
+                <input type = "radio" name = "answer"/> High Alert <input type = "radio" name = "answer"/> 6th Sense <input type = "radio" name = "answer"/>Heightened Senses  <input type = "radio" name = "answer"/> 55 Eyes on Them
 
-                <p>How many original champions did the game have when it was released? </p> *40*
-
-                <p> </p>
-
+                <p class = "Q">What is the name of Zoe's R Ability</p>
+                <input type = "radio" name = "answer"/> Now You See Me! <input type = "radio" name = "answer"/> Warp Dive <input type = "radio" name = "answer"/> Noxious Trap <input type = "radio" name = "answer"/> Portal Jump
 
              </div> 
     </div>
