--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 
             <div class= "questions">
                 <!-- <h1> Look up radio input html</h1> -->
-                
+
                 <p class = "Q"> When was League of Legends released?</p>
-                <input type = "radio" name = "answer"/> 2009 <input type = "radio" name = "answer1"/> 2012 <input type = "radio" name = "answer1"/> 2004 <input type = "radio" name = "answer1"/> 2006   
+                <input type = "radio" name = "2009"/> 2009 <input type = "radio" name = "2012"/> 2012 <input type = "radio" name = "2004"/> 2004 <input type = "radio" name = "2006"/> 2006   
             
                 <p class = "Q">How many original champions did the game have when it was released? </p> 
-                <input type = "radio" name = "answer"/> 20 <input type = "radio" name = "answer"/> 40 <input type = "radio" name = "answer"/> 55 <input type = "radio" name = "answer"/> 60
+                <input type = "radio" name = "20"/> 20 <input type = "radio" name = "40"/> 40 <input type = "radio" name = "55"/> 55 <input type = "radio" name = "60"/> 60
 
                 <p class = "Q">What is the name of Quinn's W Ability</p>
-                <input type = "radio" name = "answer"/> High Alert <input type = "radio" name = "answer"/> 6th Sense <input type = "radio" name = "answer"/>Heightened Senses  <input type = "radio" name = "answer"/> 55 Eyes on Them
+                <input type = "radio" name = "high"/> High Alert <input type = "radio" name = "sense"/> 6th Sense <input type = "radio" name = "height"/>Heightened Senses  <input type = "radio" name = "eyes"/> Eyes on Them
 
                 <p class = "Q">What is the name of Zoe's R Ability</p>
-                <input type = "radio" name = "answer"/> Now You See Me! <input type = "radio" name = "answer"/> Warp Dive <input type = "radio" name = "answer"/> Noxious Trap <input type = "radio" name = "answer"/> Portal Jump
+                <input type = "radio" name = "now"/> Now You See Me! <input type = "radio" name = "warp"/> Warp Dive <input type = "radio" name = "trap"/> Noxious Trap <input type = "radio" name = "portal"/> Portal Jump
 
              </div> 
     </div>
