--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <!-- <h1> League Of Legends Trivia</h1> -->
     
-        <div  id =  "startButton"> Start </div>
+        <div  id =  "startButton"> Click HERE To Start Game </div>
 
         <div id = "gameScreen">
             <div id= "timer"> </div>
@@ -25,16 +25,16 @@
                 <!-- <h1> Look up radio input html</h1> -->
 
                 <p class = "Q"> When was League of Legends released?</p>
-                <input type = "radio" name = "2009"/> 2009 <input type = "radio" name = "2012"/> 2012 <input type = "radio" name = "2004"/> 2004 <input type = "radio" name = "2006"/> 2006   
+                <input type = "radio" name = "year"/> 2009 <input type = "radio" name = "year"/> 2012 <input type = "radio" name = "year"/> 2004 <input type = "radio" name = "year"/> 2006   
             
                 <p class = "Q">How many original champions did the game have when it was released? </p> 
-                <input type = "radio" name = "20"/> 20 <input type = "radio" name = "40"/> 40 <input type = "radio" name = "55"/> 55 <input type = "radio" name = "60"/> 60
+                <input type = "radio" name = "champ"/> 20 <input type = "radio" name = "champ"/> 40 <input type = "radio" name = "champ"/> 55 <input type = "radio" name = "champ"/> 60
 
                 <p class = "Q">What is the name of Quinn's W Ability</p>
-                <input type = "radio" name = "high"/> High Alert <input type = "radio" name = "sense"/> 6th Sense <input type = "radio" name = "height"/>Heightened Senses  <input type = "radio" name = "eyes"/> Eyes on Them
+                <input type = "radio" name = "quinn"/> High Alert <input type = "radio" name = "quinn"/> 6th Sense <input type = "radio" name = "quinn"/>Heightened Senses  <input type = "radio" name = "quinn"/> Eyes on Them
 
                 <p class = "Q">What is the name of Zoe's R Ability</p>
-                <input type = "radio" name = "now"/> Now You See Me! <input type = "radio" name = "warp"/> Warp Dive <input type = "radio" name = "trap"/> Noxious Trap <input type = "radio" name = "portal"/> Portal Jump
+                <input type = "radio" name = "zoe"/> Now You See Me! <input type = "radio" name = "zoe"/> Warp Dive <input type = "radio" name = "zoe"/> Noxious Trap <input type = "radio" name = "zoe"/> Portal Jump
 
              </div> 
     </div>
