--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
                 <p class = "Q">How many original champions did the game have when it was released? </p> 
                 <input type = "radio" name = "champ"/> 20 <input type = "radio" name = "champ"/> 40 <input type = "radio" name = "champ"/> 55 <input type = "radio" name = "champ"/> 60
 
-                <p class = "Q">What is the name of Quinn's W Ability</p>
+                <p class = "Q">What is the name of Quinn's W Ability?</p>
                 <input type = "radio" name = "quinn"/> High Alert <input type = "radio" name = "quinn"/> 6th Sense <input type = "radio" name = "quinn"/>Heightened Senses  <input type = "radio" name = "quinn"/> Eyes on Them
 
                 <p class = "Q">What is the name of Zoe's R Ability</p>
                 <input type = "radio" name = "zoe"/> Now You See Me! <input type = "radio" name = "zoe"/> Warp Dive <input type = "radio" name = "zoe"/> Noxious Trap <input type = "radio" name = "zoe"/> Portal Jump
                 
                 <div id = "endButton">End Game</div>
+
+                
 
              </div> 
              <div id="scorePage">
